# dcadex

./: .gitignore
dcadex-daemon/: Cargo.toml  Dockerfile  configuration.yaml
dcadex-daemon/.github/worflows/: general.yml
dcadex-daemon/src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
dcadex-daemon/src/domain/: email_client.rs  mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
dcadex-daemon/src/routes/: subscriptions.rs
dcadex-daemon/tests/: health_check.rs
dcadex-web/: package-lock.json  package.json
